fix: align loaders

--- a/src/app/pages/sixteen-days-weather/sixteen-days-weather.component.scss
+++ b/src/app/pages/sixteen-days-weather/sixteen-days-weather.component.scss
@@ -1,8 +1,13 @@
-.loading{
-  margin-top: 21%;
+.weather {
+  display: flex;
+  width: 100%;
+
+  .weather__daily-step {
+    flex-grow: 1;
+  }
 }
 
 .spinner{
   width: 100%;
-  height: 60vh;
+  height: 50vh;
 }
