--- a/src/app/pages/today-weather/today-weather.component.scss
+++ b/src/app/pages/today-weather/today-weather.component.scss
@@ -25,7 +25,7 @@
 
 .spinner {
   width: 100%;
-  height: 60vh;
+  height: 50vh;
 }
 
 @media (max-width: 720px) {
